# GameEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GeneratedMetaFiles.bat  GenerationBinFiles.bat
BuildGeneration/: BuildGenConfig.ini  CMakeLists.txt  FieldTypes.py  GeneralFile.py  GenerateFiles.py  ParsClasses.py  ParsFile.py  TemplateCMakeForGenFiles.txt
CoreEngine/: CMakeLists.txt  cmake_install.cmake
CoreEngine/Core/includes/: Application.h  AssetManager.h  Base.h  Dispatcher.h  Engine.h  EntryPoint.h  FileManager.h  GBNotify.h  Input.h  InputDevice.h  Layer.h  LayerStack.h  Level.h  LightProxy.h  Log.h  MemoryManager.h  ObjectPtr.h  Platform.h  PlatformDetection.h  PrimitiveProxy.h  ShaderLibrary.h  StaticMeshProxy.h  StringUtil.h  TimerManager.h  UUID.h  UpdateFunction.h  UpdateManager.h  Window.h  World.h
CoreEngine/Core/includes/Memory/: Allocator.h  GarbageCollector.h  SaveManager.h  SerializeArchive.h
CoreEngine/Core/source/: Application.cpp  AssetManager.cpp  Base.cpp  Dispatcher.cpp  Engine.cpp  FileManager.cpp  GBNotify.cpp  Input.cpp  InputDevice.cpp  LayerStack.cpp  Level.cpp  LightProxy.cpp  Log.cpp  MemoryManager.cpp  ObjectPtr.cpp  PlatformDetection.cpp  PrimitiveProxy.cpp  ShaderLibrary.cpp  StaticMeshProxy.cpp  StringUtil.cpp  TimerManager.cpp  UUID.cpp  UpdateFunction.cpp  UpdateManager.cpp  Window.cpp  World.cpp
CoreEngine/Core/source/Memory/: Allocator.cpp  GarbageCollector.cpp  SaveManager.cpp  SerializeArchive.cpp
CoreEngine/Events/include/: Event.h  EventApplication.h  EventKeyboard.h  EventMouse.h  EventPool.h
CoreEngine/Events/source/: EventPool.cpp
CoreEngine/Math/includes/: Math.h  Matrix.h  Transform.h  Vector.h  Vector4.h
CoreEngine/Math/source/: Matrix.cpp  Transform.cpp  Vector.cpp
CoreEngine/Physics/Include/: PhysRigidBody.h  PhysScene.h
CoreEngine/Platform/Renderer/OpenGL/include/: OpenGLContext.h  OpenGLConvertData.h  OpenGLElementBufferObject.h  OpenGLFramebuffer.h  OpenGLFramebufferArray.h  OpenGLRenderCommand.h  OpenGLRenderDevice.h  OpenGLRendere.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLShaderStorageBufferObject.h  OpenGLTexture.h  OpenGLVertexArrayObject.h  OpenGLVertextBufferObject.h  OpengGLShader.h
CoreEngine/Platform/Renderer/OpenGL/source/: OpenGLContext.cpp  OpenGLConvertData.cpp  OpenGLElementBufferObject.cpp  OpenGLFramebuffer.cpp  OpenGLFramebufferArray.cpp  OpenGLRenderCommand.cpp  OpenGLRenderDevice.cpp  OpenGLRendere.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLShaderStorageBufferObject.cpp  OpenGLTexture.cpp  OpenGLVertexArrayObject.cpp  OpenGLVertextBufferObject.cpp  OpengGLShader.cpp
CoreEngine/Platform/Windows/includes/: WindowsWindow.h
CoreEngine/Platform/Windows/source/: WindowsWindow.cpp
CoreEngine/ReflectionSystem/Include/: BaseField.h  ClassField.h  ConstructionField.h  MetaClass.h  PropertyField.h  ReflectionMacros.h  ReflectionManager.h  StructField.h
CoreEngine/ReflectionSystem/Include/RegistryMap/: MapRegistryClass.h
CoreEngine/ReflectionSystem/Source/: BaseField.cpp  ClassField.cpp  ConstructionField.cpp  PropertyField.cpp  ReflectionManager.cpp
CoreEngine/ReflectionSystem/Source/RegistryMap/: MapRegistryClass.cpp
CoreEngine/Render/includes/: ElementBufferObject.h  Framebuffer.h  GraphicsContext.h  Model.h  Render.h  RenderCommand.h  RenderDevice.h  RenderHardwareInterface.h  RendererAPI.h  Shader.h  ShaderStorageBufferObject.h  ShaderUtils.h  Texture.h  VertexArrayObject.h  VertextBufferObject.h
CoreEngine/Render/includes/Enums/: TypeData.h  TypeDraw.h
CoreEngine/Render/includes/Scene/: Scene.h  SceneInterface.h
CoreEngine/Render/source/: ElementBufferObject.cpp  Framebuffer.cpp  GraphicsContext.cpp  Model.cpp  Render.cpp  RenderCommand.cpp  RenderDevice.cpp  RenderHardwareInterface.cpp  RendererAPI.cpp  Shader.cpp  ShaderStorageBufferObject.cpp  Texture.cpp  VertexArrayObject.cpp  VertextBufferObject.cpp
CoreEngine/Render/source/Scene/: Scene.cpp
CoreEngine/Runtime/CoreObject/Include/: Object.h  ObjectGlobal.h
CoreEngine/Runtime/CoreObject/Source/: Object.cpp  ObjectGlobal.cpp
CoreEngine/Runtime/includes/: Actor.h  ActorComponent.h  BaseLightComponent.h  CameraComponent.h  CameraManager.h  Controller.h  DirectionLightComponent.h  GameInstance.h  InputComponent.h  MeshComponent.h  Object.h  Pawn.h  PlayerController.h  PlayerInput.h  PointLightComponent.h  PrimitiveComponent.h  SceneComponent.h  SpotLightComponent.h
CoreEngine/Runtime/includes/Enums/: TypeLight.h  ViewUtil.h
CoreEngine/Runtime/source/: Actor.cpp  ActorComponent.cpp  BaseLightComponent.cpp  CameraComponent.cpp  CameraManager.cpp  Controller.cpp  DirectionLightComponent.cpp  GameInstance.cpp  InputComponent.cpp  MeshComponent.cpp  Pawn.cpp  PlayerController.cpp  PlayerInput.cpp  PointLightComponent.cpp  PrimitiveComponent.cpp  SceneComponent.cpp  SpotLightComponent.cpp
CoreEngine/Templates/: Function.h  Queue.h
EditorEngine/: CMakeLists.txt  cmake_install.cmake
EditorEngine/Editor/: main.cpp
EditorEngine/Editor/includes/: BaseEditorPanel.h  EditorApplication.h  EditorBase.h  EditorDetails.h  EditorEngine.h  EditorLayer.h  EditorViewport.h  EditorViewportClient.h  EditorWorld.h  SceneHierarhy.h
EditorEngine/Editor/includes/EditorUI/: BaseEditorPanel.h  EditorDetails.h  EditorMenuBar.h  EditorToolbar.h  EditorViewport.h  SceneHierarhy.h
EditorEngine/Editor/includes/Test/: TestController.h  TestEditorLevel.h  TestLight.h  TestLightActor.h  TestQuad.h
EditorEngine/Editor/includes/Util/: DrawUtils.h
EditorEngine/Editor/source/: BaseEditorPanel.cpp  EditorApplication.cpp  EditorDetails.cpp  EditorEngine.cpp  EditorLayer.cpp  EditorViewport.cpp  EditorViewportClient.cpp  EditorWorld.cpp  SceneHierarhy.cpp
EditorEngine/Editor/source/EditorUI/: BaseEditorPanel.cpp  EditorDetails.cpp  EditorMenuBar.cpp  EditorToolbar.cpp  EditorViewport.cpp  SceneHierarhy.cpp
EditorEngine/Editor/source/Test/: TestEditorLevel.cpp  TestLight.cpp  TestLightActor.cpp
EditorEngine/Editor/source/Util/: DrawUtils.cpp
EditorEngine/source/EditorEngine/: main.cpp  test.cpp
(+13 files in other folders)
